--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
-body {
+body, h1, h2, h3, h4, h5, h6 {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: Corbel, "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", "DejaVu Sans", "Bitstream Vera Sans", "Liberation Sans", Verdana, "Verdana Ref", sans-serif;
 }
