--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,11 @@
-body, h1, h2, h3, h4, h5, h6 {
+body {
   margin: 0;
   padding: 0;
+  /*color: white;*/
+    /*font-family: 'Nunito';*/
   font-family: Corbel, "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", "DejaVu Sans", "Bitstream Vera Sans", "Liberation Sans", Verdana, "Verdana Ref", sans-serif;
+}
+
+h1, h2, h3, h4, h5{
+    font-family: 'Varela Round';
 }
