Updated files with local assets

--- a/src/Home.css
+++ b/src/Home.css
@@ -5,7 +5,7 @@
 	/* min-height: 35rem; */
 	padding: 15rem 0;
 	/*background: url("https://images.pexels.com/photos/414645/pexels-photo-414645.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");*/
-	background: url("https://s3.us-east-2.amazonaws.com/shikdernyc-portfolio/background.jpeg");
+	background: url("./background.jpeg");
 	background-position: center;
 	background-repeat: no-repeat;
 	background-attachment: scroll;
