--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@ body {
   /*color: white;*/
     /*font-family: 'Nunito';*/
   font-family: Corbel, "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", "DejaVu Sans", "Bitstream Vera Sans", "Liberation Sans", Verdana, "Verdana Ref", sans-serif;
+  line-height: 1.7em;
 }
 
 h1, h2, h3, h4, h5{
