--- a/src/Project.css
+++ b/src/Project.css
@@ -15,3 +15,10 @@
 .overlay:hover{
     opacity: 1;
 }
+
+@media only screen and (max-width: 600px)  {
+	.overlay{
+		font-size: 0.75em;
+		line-height: 1em
+	}
+}
